# f1-analysis

./: .gitignore  Makefile  My_keras_mnist.ipynb  README.md  clean_data.py  columns.txt  create_columns.py  formula-1-data-analysis.ipynb  predict_with_tensorflow.ipynb  pyproject.toml  requirements.txt  tables.txt
.ipynb_checkpoints/: formula-1-data-analysis-checkpoint.ipynb
clean_f1db/: circuits.csv  constructor_results.csv  constructor_standings.csv  driver_standings.csv  drivers.csv  pit_stops.csv  qualifying.csv  races.csv  results.csv  seasons.csv  status.csv
f1db_csv/: constructor_standings.csv  constructors.csv  driver_standings.csv  drivers.csv  pit_stops.csv  results.csv
formula-1-race-data-19502017/.ipynb_checkpoints/: formula1_sql-checkpoint.ipynb
notebooks/: formula-1-data-analysis.ipynb
src/: clean_data.py  formula-1-data-analysis.ipynb  pipeline.py
src/data/: make_dataset.py
