[tool.poetry]
name = "f1-analysis"
version = "0.1.0"
description = ""
authors = ["Jacky Lee <jla524@sfu.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
